# OOP_labs

./: .gitignore  README.md
OOP_lab1/: Department.cpp  Employee.cpp  Employee.h  OOP_lab1.cpp  OOP_lab1.sln  OOP_lab1.vcxproj  OOP_lab1.vcxproj.filters  data.txt
OOP_lab1_Savostianov/: Department.h  Employee.cpp  Employee.h  OOP_lab1_Savostianov.cpp  OOP_lab1_Savostianov.sln  OOP_lab1_Savostianov.vcxproj  OOP_lab1_Savostianov.vcxproj.filters  data1.txt  data4.txt
OOP_lab2_Savostianov/: Department_Savostianov.cpp  Department_Savostianov.h  Employee_Savostianov.cpp  Employee_Savostianov.h  OOP_lab2_Savostianov.cpp  OOP_lab2_Savostianov.sln  OOP_lab2_Savostianov.vcxproj  OOP_lab2_Savostianov.vcxproj.filters  data.txt  data1.txt  data2.txt  data3.txt  data5.txt
OOP_lab3_Savostianov/: BooleanFuncs.h  CMakeLists.txt  Department_Savostianov.cpp  Department_Savostianov.h  Employee_Savostianov.h  OOP_lab2_Savostianov.cpp  addemployeedialog.cpp  addemployeedialog.h  addemployeedialog.ui  data.txt  employeetablemodel_savostianov.cpp  employeetablemodel_savostianov.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_addemployeedialog.ui
OOP_lab3_Savostianov_2/: BooleanFuncs.cpp  CMakeLists.txt  Department_Savostianov.cpp  Department_Savostianov.h  Employee_Savostianov.cpp  Employee_Savostianov.h  data1.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tablewidget_savostianov.cpp  tablewidget_savostianov.h
OOP_lab3_Savostianov_ver2/: CMakeLists.txt  Employee_Savostianov.cpp  Employee_Savostianov.h  mainwindow.cpp  mainwindow.h
Лаб1/: Department.cpp  (+5 more)
(+53 files in other folders)
